--- a/Blog/trunk/code/dbToolsExe/dbTools.exe.config
+++ b/Blog/trunk/code/dbToolsExe/dbTools.exe.config
@@ -12,9 +12,9 @@
   <connectionStrings>
     <!--核对连接串所连接的数据库是否与项目开发数据库相符-->
     <!--开发库-->
-    <add name="dbConn" connectionString=" data source=T706\SQLSERVEREXPRESS;initial catalog=ruiMvcFramework;user id=sa;password=123456;Max Pool Size=500; " providerName="System.Data.SqlClient" />
+    <add name="dbConn" connectionString=" data source=DESKTOP-TV30OMP\SQLEXPRESS;initial catalog=ruiMvcFramework;user id=sa;password=123456;Max Pool Size=500; " providerName="System.Data.SqlClient" />
     <!--开发库EF-->
-    <add name="dbEntities" connectionString=" metadata=res://*/dbModel1.csdl|res://*/dbModel1.ssdl|res://*/dbModel1.msl;provider=System.Data.SqlClient;provider connection string=&quot; data source=T706\SQLSERVEREXPRESS;initial catalog=ruiMvcFramework;user id=sa;password=123456;Max Pool Size=500; MultipleActiveResultSets=True;App=EntityFramework &quot; " providerName="System.Data.EntityClient" />
+    <add name="dbEntities" connectionString=" metadata=res://*/dbModel1.csdl|res://*/dbModel1.ssdl|res://*/dbModel1.msl;provider=System.Data.SqlClient;provider connection string=&quot; data source=DESKTOP-TV30OMP\SQLEXPRESS;initial catalog=ruiMvcFramework;user id=sa;password=123456;Max Pool Size=500; MultipleActiveResultSets=True;App=EntityFramework &quot; " providerName="System.Data.EntityClient" />
     <!--比较库-->
     <add name="dbConnCompare" connectionString=" data source=129.211.41.40;initial catalog=ruiMvcFramework;user id=sa;password=9ol.;Max Pool Size=500; " providerName="System.Data.SqlClient" />
   </connectionStrings>
