--- a/Blog/trunk/code/webSite/Web.config
+++ b/Blog/trunk/code/webSite/Web.config
@@ -10,9 +10,9 @@
   </configSections>
   <connectionStrings>
     <!--ado.net运行连接串-->
-    <add name="dbConn" connectionString=" data source=T706\SQLSERVEREXPRESS;initial catalog=ruiMvcFramework;user id=sa;password=123456;Max Pool Size=500; " providerName="System.Data.SqlClient" />
+    <add name="dbConn" connectionString=" data source=DESKTOP-TV30OMP\SQLEXPRESS;initial catalog=ruiMvcFramework;user id=sa;password=123456;Max Pool Size=500; " providerName="System.Data.SqlClient" />
     <!--ef运行连接串-->
-    <add name="dbEntities" connectionString=" metadata=res://*/dbModel1.csdl|res://*/dbModel1.ssdl|res://*/dbModel1.msl;provider=System.Data.SqlClient;provider connection string=&quot; data source=T706\SQLSERVEREXPRESS;initial catalog=ruiMvcFramework;user id=sa;password=123456;Max Pool Size=500; MultipleActiveResultSets=True;App=EntityFramework &quot; " providerName="System.Data.EntityClient" />
+    <add name="dbEntities" connectionString=" metadata=res://*/dbModel1.csdl|res://*/dbModel1.ssdl|res://*/dbModel1.msl;provider=System.Data.SqlClient;provider connection string=&quot; data source=DESKTOP-TV30OMP\SQLEXPRESS;initial catalog=ruiMvcFramework;user id=sa;password=123456;Max Pool Size=500; MultipleActiveResultSets=True;App=EntityFramework &quot; " providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
