--- a/Blog/branches/ycy/code/webSite/bin/webSite.dll.config
+++ b/Blog/branches/ycy/code/webSite/bin/webSite.dll.config
@@ -20,7 +20,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="prjName" value="mvc开发框架" />
+    <add key="prjName" value="Ycy个人博客后台" />
     <add key="isOnline" value="false" />
     <add key="isDev" value="false" />
     <!--分页大小-->
